Added text link and added text hover animation

--- a/index.html
+++ b/index.html
@@ -2,24 +2,33 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - particles.js</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>The story of life</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- particles.js container -->
-<div id="particles-js"></div>
+  
 
-<!-- stats - count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
+
+
+<!-- particles.js container -->
+<div id="particles-js">  
+
+  <div class="text1">
+    <a href="Step1.html">Let's go on a journey about life, death and what it means to live </a> 
+    <script src=""></script>
+  </div>
+
+  <div>
+    <!-- particles.js library (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
+    <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+    <script src="particles-lines.js"></script>  
+  </div>
+
 </div>
 
-<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
-<!-- partial -->
-  <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
-<script src='https://threejs.org/examples/js/libs/stats.min.js'></script><script  src="./script.js"></script>
 
+
+  
 </body>
 </html>
