--- a/Step1.html
+++ b/Step1.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="StyleStep1.css">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 </head>
 <body>
-    
+    <script type="module" src="JS/App.js"></script>
 </body>
 </html>
