--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>The story of life</title>
-  <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="CSS/StyleIndex.css">
 </head>
-<body>
-  
+
+<body onload="myFunction()">
+    
 
 
+    <!-- particles.js container. This container creates the particle effect, to change the effect, go to JS/particles-lines.js -->
+  <div id="particles-js">
+    
+    <!-- This part let's a link appear after 5 seconds, which takes you to the next page of the story -->
+    <div style="display: none;" id="myDiv" class="animate-bottom" >
+      <a  href="Step1.html">Let's go on a journey about life, death and what it means to live </a> 
+    </div>
+    <!--Calls the script for the 5 second delay-->
+    <script src="JS/onload.js"></script>
 
-<!-- particles.js container -->
-<div id="particles-js">  
+    <div>
+      <!-- particles.js library (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
+      <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+      <script src="JS/particles-lines.js"></script>  
+    </div>
 
-  <div class="text1">
-    <a href="Step1.html">Let's go on a journey about life, death and what it means to live </a> 
-    <script src=""></script>
   </div>
-
-  <div>
-    <!-- particles.js library (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
-    <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
-    <script src="particles-lines.js"></script>  
-  </div>
-
-</div>
-
 
 
   
