--- a/Step1.html
+++ b/Step1.html
@@ -9,6 +9,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
 </head>
 <body>
+  <div id="player">
+    <audio autoplay hidden>
+      <source src="Audio/AudioTest2.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+  
     <a href="index.html">Back</a>
   <script type="module" src="app.js"></script>
 </body>
