--- a/Step1.html
+++ b/Step1.html
@@ -3,19 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kinetic Typography #2</title>
+  <title>The story of life</title>
   <link rel="stylesheet" type="text/css" href="CSS/styleStep1.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script> <!-- GOOGLE WEBFONT LIBRARY -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script> <!-- PIXI.JS LIBRARY -->
 </head>
 <body>
+
+    <!-- NAVIGATION -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Previous</a></li>
+      <li><a href="step2.html">Next</a></li>
+    </ul>
+  </nav>
+
+  <!-- BACKGROUND AUDIO -->
+
   <div id="player">
     <audio autoplay hidden>
       <source src="Audio/AudioTest2.mp3" type="audio/mpeg">
     </audio>
   </div>
   
-    <a href="index.html">Back</a>
+
+
+    <!-- SCRIPT FOR THE PIXI.JS APP-->
   <script type="module" src="app.js"></script>
 </body>
 </html>
