Added page 3 with a rotating image using pixi.js

--- a/step2.html
+++ b/step2.html
@@ -9,7 +9,7 @@
     <title>The story of life</title>
 </head>
 <body>
-
+    <canvas id="mycanvas"></canvas>
     <div id="display"></div>
     <script src="JS/step2.js"></script>
 </body>
