added last page for what I can finish and adjusted readme

--- a/step2.html
+++ b/step2.html
@@ -9,7 +9,16 @@
     <title>The story of life</title>
 </head>
 <body>
+    
+    <nav>
+        <ul>
+          <li><a id="prev" href="step1.html">Previous</a></li>
+          <li><a id="next" href="step3.html">Next</a></li>
+        </ul>
+      </nav>
+   
     <canvas id="mycanvas"></canvas>
+    
     <div id="display"></div>
     <script src="JS/step2.js"></script>
 </body>
