--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
     <!-- This part let's a link appear after 5 seconds, which takes you to the next page of the story -->
     <div style="display: none;" id="myDiv" class="animate-bottom" >
-      <a href="step1.html" onclick="playAudio()">Let's go on a journey about life, death and what it means to live </a> 
-      <audio id="playAudio" src="Audio/KindredSound.mp3"></audio>
+      <a href="step1.html">Let's go on a journey about life, death and what it means to live </a> 
     </div>
     <!--Calls the script for the 5 second delay-->
     <script src="JS/onload.js"></script>
